--- a/src/main/java/lendle/courses/network/controlledinputs/Combobox3.form
+++ b/src/main/java/lendle/courses/network/controlledinputs/Combobox3.form
@@ -49,12 +49,18 @@
     <Component class="javax.swing.JComboBox" name="jComboBox1">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="5">
+          <StringArray count="11">
             <StringItem index="0" value="A"/>
             <StringItem index="1" value="B"/>
             <StringItem index="2" value="C"/>
             <StringItem index="3" value="D"/>
             <StringItem index="4" value="E"/>
+            <StringItem index="5" value="F"/>
+            <StringItem index="6" value="G"/>
+            <StringItem index="7" value="H"/>
+            <StringItem index="8" value="I"/>
+            <StringItem index="9" value="J"/>
+            <StringItem index="10" value="K"/>
           </StringArray>
         </Property>
       </Properties>
@@ -68,15 +74,24 @@
     <Component class="javax.swing.JComboBox" name="jComboBox2">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="5">
+          <StringArray count="11">
             <StringItem index="0" value="Apple"/>
             <StringItem index="1" value="Book"/>
             <StringItem index="2" value="Cat"/>
             <StringItem index="3" value="Door"/>
             <StringItem index="4" value="Egg"/>
+            <StringItem index="5" value="Fat"/>
+            <StringItem index="6" value="Google"/>
+            <StringItem index="7" value="Hat"/>
+            <StringItem index="8" value="Ice cream"/>
+            <StringItem index="9" value="Jacket"/>
+            <StringItem index="10" value="King"/>
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox2ActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
